--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
   "homepage": "https://github.com/WillMacI/mint-local#readme",
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.6.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.2",
-    "sequelize": "^6.35.2"
+    "plaid": "^18.2.0",
+    "sequelize": "^6.35.2",
+    "uuid": "^9.0.1"
   }
 }
