--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-PLAID_CLIENT_ID=658f77a092e766001c42ea5a
-PLAID_SECRET=cb3dd6e53947da511e23bdf35767ef
-PLAID_ENV=sandbox
-PLAID_COUNTRY_CODES=CA
-PLAID_API_ENDPOINT=http://localhost:8001
+PLAID_CLIENT_ID=
+PLAID_SECRET=
+PLAID_ENV=
+PLAID_COUNTRY_CODES=
+PLAID_API_ENDPOINT=
 DB_NAME=mint_local
-DB_USER=root
-DB_PASSWORD=root
-DB_HOST=localhost
-DB_PORT=8806
-DB_DIALECT=mysql
-PHPMYADMIN_PORT=8888
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_DIALECT=
+PHPMYADMIN_PORT=
